--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>mssc-brewery</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>mssc-brewery</name>
-    <description>SVG Brewery</description>
+    <description>SFG Brewery</description>
 
     <properties>
         <java.version>11</java.version>
